moved create-league to different page

--- a/views/pages/create-league.ejs
+++ b/views/pages/create-league.ejs
@@ -9,11 +9,11 @@
     <h1><%= title %></h1>
     <p>Welcome to <%= title %> <%= user %></p>
     <% if (is_active) { %>
-      <h3>Join a league</h3>
-      <form action="/league/join" method="post">
-        League code&nbsp;
-        <input type="text" name="code" />&nbsp;
-        <input type="submit" name="Submit" />&nbsp;
+      <h3>Create your league</h3>
+      <form action="/league/create" method="post">
+        League Amount:&nbsp;
+        <input type="number" name="amount" />&nbsp;
+        <input type="submit" name="Submit" />
       </form>
     <% } else { %>
       <!-- Write an email to -->
