--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -19,6 +19,7 @@
       <div>Confirm Password</div>
       <div><input type="password" name="confirm_password" id="confirm_password" /></div>
       <div><input type="submit" name="Submit" /></div>
+      <div><%= action ? action : "" %></div>
     </form>
 
     <h3>Login</h3>
