added my leagues button to directly view leagues after auction

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -15,6 +15,10 @@
         <input type="text" name="code" />&nbsp;
         <input type="submit" name="Submit" />&nbsp;
       </form>
+      <br/>
+      <br/>
+      <br/>
+      <button>My Leagues</button>
     <% } else { %>
       <!-- Write an email to -->
     <% } %>
