--- a/views/pages/league/auction-pool.ejs
+++ b/views/pages/league/auction-pool.ejs
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1><%= title %></h1>
-    <p>Your are in league <%= result.league_code %></p>
+    <p>You are in league <%= result.league_code %></p>
     <div class="container">
       <% if(result.teams) { %>
         <div><h3>Teams</h3></div>
