--- a/views/pages/league/base-prices.ejs
+++ b/views/pages/league/base-prices.ejs
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1><%= title %></h1>
-    <p>Your are in league <%= result.league_code %></p>
+    <p>You are in league <%= result.league_code %></p>
     <form action="/league/set-base-prices" method="post">
       <% if(result.teams) { %>
         <div><h3>Teams</h3></div>
