--- a/views/pages/league/bidding.ejs
+++ b/views/pages/league/bidding.ejs
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1><%= title %></h1>
-    <p>Your are in league <%= result.league_code %></p>
+    <p>You are in league <%= result.league_code %></p>
     <div class="container">
         <!-- <% if (result.is_admin && !result.bidding_details) { %>
         <button type="button" id="start_auction">Start Auction</button>
