--- a/views/scss/league/bidding.scss
+++ b/views/scss/league/bidding.scss
@@ -46,6 +46,21 @@
 		}
 	}
 
+	.purseDetails {
+		display: flex;
+		position: absolute;
+		left: 0;
+		bottom: 70px;
+		width: 100%;
+		justify-content: space-between;
+		div {
+			width: 49%;
+		}
+		.livePurse {
+			text-align: right;
+		}
+	}
+
 	#bid {
 		position: absolute;
 		width: 150px;
@@ -62,20 +77,12 @@
 					-6px -6px 12px #ffffff;
 	}
 
-	.purseDetails {
-		display: flex;
-		position: absolute;
-		left: 0;
-		bottom: 70px;
-		width: 100%;
-		justify-content: space-between;
-		div {
-			width: 49%;
-		}
-		.livePurse {
-			text-align: right;
-		}
-	}
+	// #participants_email {
+	// 	font-size: 10px;
+	// 	.offlineUser {
+	// 		color: #cccccc;
+	// 	}
+	// }
 
 	.hideButton {
 		display: none;
