--- a/views/scss/league/bidding.scss
+++ b/views/scss/league/bidding.scss
@@ -77,12 +77,12 @@
 					-6px -6px 12px #ffffff;
 	}
 
-	// #participants_email {
-	// 	font-size: 10px;
-	// 	.offlineUser {
-	// 		color: #cccccc;
-	// 	}
-	// }
+	#participants_email {
+		font-size: 10px;
+		.offlineUser {
+			color: #cccccc;
+		}
+	}
 
 	.hideButton {
 		display: none;
