sold player is not grayed out. height of my team should be lesser then thebottom menu. purse shall be 3000

--- a/public/stylesheets/competitors.css
+++ b/public/stylesheets/competitors.css
@@ -22,6 +22,9 @@
   font-weight: 600;
 }
 
+.competitorTeam {
+  margin-bottom: 72px;
+}
 .competitorTeam .biddingEntity h4 {
   margin-top: 24px;
 }
